==> pukahontas/arduino_core_ch32/cores/arduino/HardwareTimer.cpp <==
#include "Arduino.h"
#include "HardwareTimer.h"
#define PIN_NOT_USED 0xFF
#define MAX_RELOAD ((1 << 16) - 1) // Currently even 32b timers are used as 16b to have generic behavior

void HardwareTimer::pause()
{
  // Disable all IT
  TIM_ITConfig(_timerObj.handle.Instance, TIM_IT_Update|TIM_IT_CC1|TIM_IT_CC2|TIM_IT_CC3|TIM_IT_CC4, DISABLE);
  // Stop timer. Required to restore HAL State: HAL_TIM_STATE_READY
  TIM_Cmd(_timerObj.handle.Instance,DISABLE);
}

void HardwareTimer::resume(void)
{
  // Clear flag and enable IT
  if (callbacks[0])  // 0 for update
  {
    TIM_ClearFlag(_timerObj.handle.Instance,TIM_FLAG_Update );  
    TIM_ITConfig(_timerObj.handle.Instance, TIM_IT_Update, ENABLE);
    // Start timer in Time base mode. Required when there is no channel used but only update interrupt.
    TIM_Cmd(_timerObj.handle.Instance, ENABLE );
  }
  // Resume all channels
  resumeChannel(1);
  resumeChannel(2);
  resumeChannel(3);
  resumeChannel(4);
}

int HardwareTimer::getChannel(uint32_t channel)
{
  uint32_t return_value;

  switch (channel) {
    case 1:
      return_value = TIM_Channel_1;
      break;
    case 2:
      return_value = TIM_Channel_2;
      break;
    case 3:
      return_value = TIM_Channel_3;
      break;
    case 4:
      return_value = TIM_Channel_4;
      break;
    default:
      return_value = -1;
  }
  return return_value;
}

void HardwareTimer::resumeChannel(uint32_t channel)
{
  int timChannel = getChannel(channel); 
  int timAssociatedInputChannel;
  if (timChannel == -1) {
    Error_Handler();
  }

  int interrupt = getIT(channel);
  if (interrupt == -1) {
    Error_Handler();
  }

  int LLChannel = getLLChannel(channel);
  if (LLChannel == -1) {
    Error_Handler();
  }

  // Clear flag and enable IT
  if (callbacks[channel]) {
    TIM_ClearFlag(_timerObj.handle.Instance,interrupt );  
    TIM_ITConfig(_timerObj.handle.Instance, interrupt, ENABLE);
  }

  switch (_ChannelMode[channel - 1])
  {
    case TIMER_OUTPUT_COMPARE_PWM1:
    case TIMER_OUTPUT_COMPARE_PWM2: 
    {
#if false && defined(TIM_CC1NE) /* not sure why the CCxNE flag doesn't work for inverted PWM pins, but the non-inverted one does */
        if (isComplementaryChannel[channel - 1]) 
        {
          TIM_CCxNCmd( _timerObj.handle.Instance, timChannel, TIM_CCxN_Enable );
          _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE
          TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        } 
        else
#endif
        {
          TIM_CCxCmd( _timerObj.handle.Instance, timChannel, TIM_CCx_Enable );
          _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE
          TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        }
      }
      break;
    case TIMER_OUTPUT_COMPARE_ACTIVE:
    case TIMER_OUTPUT_COMPARE_INACTIVE:
    case TIMER_OUTPUT_COMPARE_TOGGLE:
    case TIMER_OUTPUT_COMPARE_FORCED_ACTIVE:
    case TIMER_OUTPUT_COMPARE_FORCED_INACTIVE: 
    {
#if defined(TIM_CC1NE)
        if (isComplementaryChannel[channel - 1]) 
        {
          // HAL_TIMEx_OCN_Start(&(_timerObj.handle), timChannel);
          TIM_CCxNCmd( _timerObj.handle.Instance, timChannel, TIM_CCxN_Enable );
          _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE
          TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        } 
        else
#endif
        {
          // HAL_TIM_OC_Start(&(_timerObj.handle), timChannel);
          TIM_CCxCmd( _timerObj.handle.Instance, timChannel, TIM_CCx_Enable );
          _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE
          TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        }
      }
      break;
    case TIMER_INPUT_FREQ_DUTY_MEASUREMENT: {
        TIM_CCxCmd( _timerObj.handle.Instance, timChannel, TIM_CCx_Enable );
        // Enable 2nd associated channel
        //两个关联通道，配置为捕获通道   1 & 2  /  3 & 4        
        timAssociatedInputChannel = getAssociatedChannel(channel);
        TIM_CCxCmd( _timerObj.handle.Instance, getLLChannel(timAssociatedInputChannel), TIM_CCx_Enable );
       
        _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE

         TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        if (callbacks[channel]) 
        {
          TIM_ClearFlag(_timerObj.handle.Instance,getIT(timAssociatedInputChannel));      
          TIM_ITConfig(_timerObj.handle.Instance,getIT(timAssociatedInputChannel),ENABLE);
        }
      }
      break;
    case TIMER_INPUT_CAPTURE_RISING:
    case TIMER_INPUT_CAPTURE_FALLING:
    case TIMER_INPUT_CAPTURE_BOTHEDGE: {

        TIM_CCxCmd( _timerObj.handle.Instance, timChannel, TIM_CCx_Enable );
        _timerObj.handle.Instance->BDTR |= TIM_MOE;   //MOE ENABLE
        TIM_Cmd( _timerObj.handle.Instance, ENABLE );
        // HAL_TIM_IC_Start(&(_timerObj.handle), timChannel);
      }
      break;
    case TIMER_OUTPUT_COMPARE:
    case TIMER_DISABLED:
       if (!(_timerObj.handle.Instance->CTLR1 & TIM_CEN) ) //if not enable 
       { 
          TIM_Cmd( _timerObj.handle.Instance, ENABLE ) ; 
       }
      break;
    case TIMER_NOT_USED:
    default :
      break;
  }
}

void HardwareTimer::setMode(uint32_t channel, TimerModes_t mode, uint32_t pin)
{
  setMode(channel, mode, digitalPinToPinName(pin));
}

void HardwareTimer::setMode(uint32_t channel, TimerModes_t mode, PinName pin)
{
  int timChannel = getChannel(channel);  //get arduino channel-->timer channel
  int timAssociatedInputChannel;      
  TIM_OCInitTypeDef channelOC={0};
  TIM_ICInitTypeDef channelIC={0};

  if (timChannel == -1) {
    Error_Handler();
  }

  /* Configure some default values. Maybe overwritten later */
  channelOC.TIM_OCMode = TIMER_NOT_USED;  //set default value 0xFFFF

  // channelOC.Pulse = __HAL_TIM_GET_COMPARE(&(_timerObj.handle), timChannel);  // keep same value already written in hardware register
  channelOC.TIM_Pulse =  (((timChannel) == TIM_Channel_1) ? (_timerObj.handle.Instance->CH1CVR) :\
                          ((timChannel) == TIM_Channel_2) ? (_timerObj.handle.Instance->CH2CVR) :\
                          ((timChannel) == TIM_Channel_3) ? (_timerObj.handle.Instance->CH3CVR) :\
                          (_timerObj.handle.Instance->CH4CVR));

  channelOC.TIM_OCPolarity = TIM_OCPolarity_High;
#if defined(TIM_OIS1)
  channelOC.TIM_OCIdleState = TIM_OSSIState_Disable;
#endif
#if defined(TIM_CC1NE)
  channelOC.TIM_OCNPolarity = TIM_OCNPolarity_High;
#if defined(TIM_OIS1N)
  channelOC.TIM_OCNIdleState = TIM_OCNIdleState_Reset;
#endif
#endif
  channelIC.TIM_ICPolarity = TIM_ICPolarity_Rising;
  channelIC.TIM_ICSelection = TIM_ICSelection_DirectTI;
  channelIC.TIM_ICPrescaler = TIM_ICPSC_DIV1;
  channelIC.TIM_ICFilter = 0;

  switch (mode) {
    case TIMER_DISABLED:
      channelOC.TIM_OCMode = TIM_OCMode_Timing;

      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    case TIMER_OUTPUT_COMPARE:
      /* In case of TIMER_OUTPUT_COMPARE, there is no output and thus no pin to
       * configure, and no channel. So nothing to do. For compatibility reason
       * restore TIMER_DISABLED if necessary.
       */
      if (_ChannelMode[channel - 1] != TIMER_DISABLED) {
        _ChannelMode[channel - 1] = TIMER_DISABLED;
        channelOC.TIM_OCMode = TIM_OCMode_Timing;

        TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      }
      return;
    case TIMER_OUTPUT_COMPARE_ACTIVE:
      channelOC.TIM_OCMode = TIM_OCMode_Active;
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);

      break;
    case TIMER_OUTPUT_COMPARE_INACTIVE:
      channelOC.TIM_OCMode = TIM_OCMode_Inactive;
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    case TIMER_OUTPUT_COMPARE_TOGGLE:
      channelOC.TIM_OCMode = TIM_OCMode_Toggle;
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    case TIMER_OUTPUT_COMPARE_PWM1:
      channelOC.TIM_OCMode = TIM_OCMode_PWM1;
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);      
      break;
    case TIMER_OUTPUT_COMPARE_PWM2:
      channelOC.TIM_OCMode = TIM_OCMode_PWM2;
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    
    case TIMER_OUTPUT_COMPARE_FORCED_ACTIVE:
      channelOC.TIM_OCMode = 0x0050;   //force high
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    case TIMER_OUTPUT_COMPARE_FORCED_INACTIVE:
      channelOC.TIM_OCMode = 0x0040;   //force low
      TIM_OC_ConfigChannel_Static(_timerObj.handle.Instance, &channelOC, timChannel);
      break;
    case TIMER_INPUT_CAPTURE_RISING:
      channelIC.TIM_ICPolarity = TIM_ICPolarity_Rising;
      TIM_IC_ConfigChannel_Static(_timerObj.handle.Instance, &channelIC,timChannel);
      break;
    case TIMER_INPUT_CAPTURE_FALLING:
      channelIC.TIM_ICPolarity = TIM_ICPolarity_Falling;
      TIM_IC_ConfigChannel_Static(_timerObj.handle.Instance, &channelIC,timChannel);
      break;
    case TIMER_INPUT_CAPTURE_BOTHEDGE:
      channelIC.TIM_ICPolarity = TIM_ICPolarity_BothEdge;
      TIM_IC_ConfigChannel_Static(_timerObj.handle.Instance, &channelIC,timChannel);      
      break;
    case TIMER_INPUT_FREQ_DUTY_MEASUREMENT:
      // Configure 1st channel
      channelIC.TIM_ICPolarity = TIM_ICPolarity_Rising;
      channelIC.TIM_ICSelection = TIM_ICSelection_DirectTI;
      TIM_IC_ConfigChannel_Static(_timerObj.handle.Instance, &channelIC, timChannel); 
      // // Identify and configure 2nd associated channel
      timAssociatedInputChannel = getAssociatedChannel(channel);
      _ChannelMode[timAssociatedInputChannel - 1] = mode;
      channelIC.TIM_ICPolarity = TIM_ICPolarity_Falling;
      channelIC.TIM_ICSelection = TIM_ICSelection_IndirectTI;
      TIM_IC_ConfigChannel_Static(_timerObj.handle.Instance, &channelIC, timChannel);    
      break;
    default:
      break;
  }
  // Save channel selected mode to object attribute
  _ChannelMode[channel - 1] = mode;
  if (pin != NC) 
  {
    if ((int)getTimerChannel(pin) == timChannel) 
    {
      /* Configure PWM GPIO pins */
      pinmap_pinout(pin, PinMap_TIM);
      if ((mode == TIMER_INPUT_CAPTURE_RISING) || (mode == TIMER_INPUT_CAPTURE_FALLING) \
          || (mode == TIMER_INPUT_CAPTURE_BOTHEDGE) || (mode == TIMER_INPUT_FREQ_DUTY_MEASUREMENT)) 
      {
          //input alternate function must configure GPIO in input mode
          pinMode(pinNametoDigitalPin(pin), INPUT);  //set input
      }
    } 
    else
     {
      // Pin doesn't match with timer output channels
      Error_Handler();
    }

#if defined(TIM_CC1NE)
     isComplementaryChannel[channel - 1] = CH_PIN_INVERTED(pinmap_function(pin, PinMap_TIM)); //(x>>20)&0x1 
#endif
  }
}

void HardwareTimer::refresh()
{
  TIM_GenerateEvent( _timerObj.handle.Instance,TIM_EventSource_Update );
}
